--- a/myblogproject/myblog/templates/home.html
+++ b/myblogproject/myblog/templates/home.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load socialaccount %}
+{% providers_media_js %}
 
 
 {% block content %}
@@ -9,6 +11,18 @@
         <h1>Mulgyeol's Blog</h1>
         <p class="lead text-muted">This is myblogproject</p>
         <p>
+            <a href="/accounts/signup">회원가입</a><br>
+
+            {% if user.is_authenticated %}
+            <a href="/accounts/logout">로그아웃</a><br>
+            {{user.username}} 님이 로그인 중
+
+            {% else %}
+            <a href="/accounts/login">Login</a>
+            <a href="{% provider_login_url 'google' %}">Login with google</a><br>
+
+
+            {% endif %}
             <br>
             <a href="{%url 'new' %}" class="btn btn-primary my-2">Add Post</a>
             <a href = "{%url 'create10' %}" class = "btn btn-secondary my-2">create 10 Post</a>
