--- a/myblogproject/myblog/templates/home.html
+++ b/myblogproject/myblog/templates/home.html
@@ -6,23 +6,26 @@
 {% block content %}
 
 
+
+
+
 <section class="jumbotron text-center">
     <div class="container">
         <h1>Mulgyeol's Blog</h1>
         <p class="lead text-muted">This is myblogproject</p>
         <p>
-            <a href="/accounts/signup">회원가입</a><br>
+            <a href="/accounts/signup" class="btn btn-primary my-2">회원가입</a><br>
 
             {% if user.is_authenticated %}
-            <a href="/accounts/logout">로그아웃</a><br>
-            {{user.username}} 님이 로그인 중
-
+            <a href="/accounts/logout" class="btn btn-danger">로그아웃</a><br>
+            <h3>{{user.username}}</h3> 님이 로그인 중
+            
             {% else %}
-            <a href="/accounts/login">Login</a>
-            <a href="{% provider_login_url 'google' %}">Login with google</a><br>
+            <a href="/accounts/login" class="btn btn-secondary">Login</a> 
+            <a href="{% provider_login_url 'google' %}" class="btn btn-secondary">Login with google</a><br>
 
-
-            {% endif %}
+            {% endif %}</p>
+        <p>
             <br>
             <a href="{%url 'new' %}" class="btn btn-primary my-2">Add Post</a>
             <a href = "{%url 'create10' %}" class = "btn btn-secondary my-2">create 10 Post</a>
@@ -51,8 +54,8 @@
                         <p class="card-text">{{ post.summary }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href= {% url 'detail' post.id %}"> View</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href='{% url 'detail' post.id %}';"> View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary" onclick="location.href='{% url 'delete' post.id %}';"> Del</button>
                             </div>
                             <small class="text-muted">{{ post.pub_date }}</small>
                         </div>
