--- a/myblogproject/myblog/templates/new.html
+++ b/myblogproject/myblog/templates/new.html
@@ -6,7 +6,7 @@
 <div class="container">
     <h1>New post</h1>
     <br>
-    <form method="POST" class="post-form">{% csrf_token %}
+    <form method="POST" class="post-form" enctype="multipart/form-data">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
