--- a/myblogproject/myblogproject/templates/base.html
+++ b/myblogproject/myblogproject/templates/base.html
@@ -27,6 +27,9 @@
     <meta name="msapplication-config" content="/docs/4.5/assets/img/favicons/browserconfig.xml">
     <meta name="theme-color" content="#563d7c">
 
+    <!--font Awesome CDN-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
+
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
@@ -85,19 +88,30 @@
             </div>
         </div>
         <div class="navbar navbar-dark bg-dark shadow-sm">
-            <div class="container d-flex justify-content-between">
-                <a href="#" class="navbar-brand d-flex align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="mr-2"
-                        viewBox="0 0 24 24" focusable="false">
-                        <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
-                        <circle cx="12" cy="13" r="4" /></svg>
-                    <strong>Mulgyeol's Blog</strong>
-                </a>
+            <div class="container d-flex bd-highlight">
+                <div class="mr-auto p-2 bd-highlight">
+                    <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                            stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="mr-2"
+                            viewBox="0 0 24 24" focusable="false">
+                            <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
+                            <circle cx="12" cy="13" r="4" /></svg>
+                        <strong>Mulgyeol's Blog</strong>
+                    </a>
+                </div>
+                
+                <div class="p-2 bd-highlight">
+                    {% if user.is_authenticated %}
+                        <div class="navbar-text">{{user.username}}님이 로그인 중입니다.</div>
+                    {% endif %}
+                </div>
+
+                <div class="p-2 bd-highlight">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
                     aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                </div>
             </div>
         </div>
     </header>
@@ -112,7 +126,7 @@
         <div class="container">
             <p class="float-right">
                 <br>
-                2020.08.25
+                2020.09.10
             </p>
         </div>
     </footer>
